package com.example.onlinesupertmarket.DTO;

public class ShoopingCartDTO {

    String name;
    String cost;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getCost() {
        return cost;
    }

    public void setCost(String cost) {
        this.cost = cost;
    }
}
