package com.example.onlinesupertmarket.Model;

public class Ingredients {

    private String name;
    private  String image;

    public Ingredients(String name, String image) {
        this.name = name;
        this.image = image;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getImage() {
        return image;
    }

    public void setImage(String image) {
        this.image = image;
    }
}
