@startuml
hide circle

class User{
Username
Hash
Password
}


class RecipeItem{
Id
Title
Image
}
class Ingredients{
Name
Image
Price
}


class ShoopingCart{
Item

}

class CartItem{
Id
Name
Cost
}

User"1"--"1..*" CartItem:can access >
User "1" -- "1..*" RecipeItem: can access >
RecipeItem"1"--left"1..*"Ingredients:has >
CartItem"1..*" --"1" ShoopingCart   :shows <
Ingredients"1..*" -- "1" ShoopingCart: added to >

@enduml